# raylib-hot-reload-cpp

./: CMakeLists.txt  README.md  main.cpp  mousegradient.frag
Game/: CMakeLists.txt  main.cpp  main.hpp
